# grupoIC

./: Bitacora.txt  README.md
P1/: Bitacora.txt  PRÁCTICA 1.docx
P2/: Sobel.h  Sobel_testbench.cpp  makefile  sobel1.s  sobel2.s  sobel3.s
P2/Input/: 10000.yuv
P2/Output/: 10000.G.yuv  10000.Gx.yuv  10000.Gy.yuv  10000.angle.yuv  3000.G.yuv  3000.Gx.yuv  3000.Gy.yuv  3000.angle.yuv  4000.Gx.yuv  4000.angle.yuv  4096.G.yuv  4096.Gx.yuv  4096.Gy.yuv  4096.angle.yuv  5000.G.yuv  5000.Gx.yuv  5000.Gy.yuv  5000.angle.yuv
P3/unraw/: CMakeLists.txt  main.cc
P3/unraw/LibRaw/: Makefile  cmake_install.cmake  libraw.so.23.0.0  libraw_config.h  libraw_r.so.23.0.0
